--- a/index.html
+++ b/index.html
@@ -6,9 +6,54 @@
       (Responsive design = make the website look good on
       smaller screen sizes like a phone or a tablet). -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Tangerine">
+
+  <link rel="stylesheet" href="styles/shared/general.css">
+  <link rel="stylesheet" href="styles/pages/mainpage.css">
+  <link rel="stylesheet" href="styles/shared/mainpageHeader.css">
   <title>Book Sharing Community</title>
 </head>
 <body>
+  <h1>Book Sharing Community!</h1>
+  <div class="amazon-header">
+    <div class="amazon-header-left-section">
+      <!--The <a> tag redirects to the webpage passed to href attribute-->
+      <a href="index.html" class="header-link">
+        <img class="amazon-logo"
+          src="images/logo_bookcommunity.jpg">
+        <img class="amazon-mobile-logo"
+          src="images/logo_bookcommunity.jpg">
+      </a>
+    </div>
+
+    <div class="amazon-header-middle-section">
+      <input class="search-bar" type="text" placeholder="Search">
+
+      <button class="search-button">
+        <img class="search-icon" src="images/icons/search-icon.png">
+      </button>
+    </div>
+
+    <div class="amazon-header-right-section">
+      <a class="orders-link header-link" href="orders.html">
+        <span class="returns-text">Returns</span>
+        <span class="orders-text">& Orders</span>
+      </a>
+
+      <a class="cart-link header-link" href="checkout.html">
+        <img class="cart-icon" src="images/icons/cart-icon.png">
+        <div class="cart-quantity"></div>
+        <div class="cart-text">Cart</div>
+      </a>
+    </div>
+  </div>
   
+  <div class="main">
+    <div class="products-grid">
+    </div>
+  </div>
 </body>
 </html>
