--- a/index.html
+++ b/index.html
@@ -6,14 +6,21 @@
       (Responsive design = make the website look good on
       smaller screen sizes like a phone or a tablet). -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Load a font called Tangerine for headings from Google Fonts. -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Tangerine">
+  href="https://fonts.googleapis.com/css?family=Tangerine">
+  <!-- Load a font called Robots from Google Fonts for everything but headings . -->
+  <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" >
 
+  <!--Here are the CSS files for this page-->
   <link rel="stylesheet" href="styles/shared/general.css">
   <link rel="stylesheet" href="styles/pages/mainpage.css">
   <link rel="stylesheet" href="styles/shared/mainpageHeader.css">
+
   <title>Book Sharing Community</title>
 </head>
 <body>
@@ -53,6 +60,56 @@
   
   <div class="main">
     <div class="products-grid">
+      <div class="product-container">
+        <div class="product-image-container">
+          <img class="product-image"
+            src=images/products/atomic-habits.jpg>
+        </div>
+
+        <div class="product-name limit-text-to-2-lines">
+          Atomic Habits PaperBack
+        </div>
+
+        <div class="product-rating-container">
+          <img class="product-rating-stars"
+            src="images/ratings/rating-45.png">
+          <div class="product-rating-count link-primary">
+            87
+          </div>
+        </div>
+
+        <div class="product-price">
+          10.90
+        </div>
+
+        <div class="product-quantity-container ">
+          <select class="js-quantity-selector-${product.id}">
+            <option selected value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+          </select>
+        </div>
+
+        <div class="product-spacer"></div>
+
+        <div class="added-to-cart js-added-${product.id}">
+          <img src="images/icons/checkmark.png">
+          Added
+        </div>
+
+        <button class="add-to-cart-button button-primary"
+        data-product-id="e43638ce-6aa0-4b85-b27f-e1d07eb678c6">
+        
+          Add to Cart
+        </button>
+      </div>`
     </div>
   </div>
 </body>
