staged and committed

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 </head>
 <body>
   <h1>Book Sharing Community!</h1>
+
   <div class="amazon-header">
     <div class="amazon-header-left-section">
       <!--The <a> tag redirects to the webpage passed to href attribute-->
@@ -83,7 +84,7 @@
         </div>
 
         <div class="product-quantity-container ">
-          <select class="js-quantity-selector-${product.id}">
+          <select class="js-quantity-selector-e43638ce-6aa0-4b85-b27f-e1d07eb678c6">
             <option selected value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -99,7 +100,7 @@
 
         <div class="product-spacer"></div>
 
-        <div class="added-to-cart js-added-${product.id}">
+        <div class="added-to-cart ">
           <img src="images/icons/checkmark.png">
           Added
         </div>
