Added login and signup pages , also added a font type in header of index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="styles/shared/general.css">
   <link rel="stylesheet" href="styles/pages/mainpage.css">
   <link rel="stylesheet" href="styles/shared/mainpageHeader.css">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
 
   <title>Book Sharing Community</title>
 </head>
@@ -35,7 +36,10 @@
         <img class="amazon-mobile-logo"
           src="images/logo_bookcommunity.jpg">
       </a>
+        <div class="text"><p>BOOK SHARING COMMUNITY</p></div>
     </div>
+
+  
 
     <div class="amazon-header-middle-section">
       <input class="search-bar" type="text" placeholder="Search">
@@ -46,11 +50,15 @@
     </div>
 
     <div class="amazon-header-right-section">
+      <a class="login-link header-link" href="login.html">
+        <span class="login-text">Login</span>
+      </a>
+
       <a class="orders-link header-link" href="orders.html">
         <span class="returns-text">Returns</span>
         <span class="orders-text">& Orders</span>
       </a>
-
+      
       <a class="cart-link header-link" href="checkout.html">
         <img class="cart-icon" src="images/icons/cart-icon.png">
         <div class="cart-quantity"></div>
